# inter-python-matlab-cpp-communication

./: .gitignore  CMakeLists.txt  README.md
include/: helper.hpp
receiver/: CMakeLists.txt  receiver.cpp  receiver.py
sender/: CMakeLists.txt  sender.cpp  sender.py
